# jirac

./: .travis.yml  Cargo.toml  README.md
src/: client.rs  credentials.rs  errors.rs  lib.rs  options.rs
src/v2/: application_role.rs  attachment.rs  changelog.rs  comment.rs  component.rs  group.rs  history.rs  issue.rs  issue_link.rs  issue_link_type.rs  issue_type.rs  item.rs  mod.rs  pagination.rs  permission.rs  priority.rs  progress.rs  project.rs  resolution.rs  status.rs  status_category.rs  time_tracking.rs  user.rs  version.rs  vote.rs  watches.rs  worklog.rs
tests/: v2_application_role.rs  v2_component_test.rs  v2_group_test.rs  v2_user_test.rs  v2_version.rs
tests/assets/v2/: application_role.json  application_role_all.json  attachment.json  avatar.json  component.json  group.json  issue.json  issue_link.json  issue_link_type.json  issuetype.json  my_permissions.json  permissions.json  priority.json  project.json  resolution.json  status.json  status_category.json  user.json  version.json  worklog.json
