[package]
name = "jirac"
version = "0.1.0"
authors = ["Howard Beard-Marlowe"]
license = "MIT"
description = "A client for interfacing with the JIRA REST API"
keywords = ["jira", "client", "atlassian"]
categories = ["client"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9"
serde = "1.0"
serde_json = "1.0"
readonly = "0.1"